--- a/programmeringsopgave/index.html
+++ b/programmeringsopgave/index.html
@@ -42,6 +42,6 @@
             </ul>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
