--- a/skabelon/index.html
+++ b/skabelon/index.html
@@ -5,13 +5,15 @@
     <meta name="description" content="A Page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        Peter Winther - A whole new Doc
+        A whole new Doc - Peter Winther
     </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     A new page!
+
+    SET THE TITLE NOW DUMBO
 
 </body>
 </html>
