--- a/clientsideopgave/index.html
+++ b/clientsideopgave/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="A Page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        Peter Winther - A whole new Doc
+        Client-side - Peter Winther
     </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
