--- a/programmeringsopgave/index.html
+++ b/programmeringsopgave/index.html
@@ -31,7 +31,7 @@
                     10 x 10
                 </button>
                 <form method="POST">
-                    <input name="selfGen" type="number" class="formInput" min="2" max="16" value="2">
+                    <input name="selfGen" step="2" type="number" class="formInput" min="2" max="16" value="2">
                     <button name="subButt" type="button" class="formButt">
                         Start!
                     </button>
